style(about): fix partner spacing for small devices

--- a/src/pages/about-empire.module.less
+++ b/src/pages/about-empire.module.less
@@ -204,7 +204,7 @@
     }
 
     .partners {
-      margin: 0 24px;
+      margin: 0 24px 0 12px;
       flex-direction: column;
 
       .partner {
@@ -217,7 +217,7 @@
 
         .text {
           min-width: 224px;
-          margin-left: 40px;
+          margin-left: 20px;
         }
 
         // targets FINRA Partner
